Fix an error in the chinese translation

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4447,7 +4447,7 @@ msgstr "<span color='#484848'>新主机：</span>"
 
 #: ../src/vmm-migrate.glade.h:5
 msgid "<span color='#484848'>Original host:</span>"
-msgstr "<span color='#484848'>原始主机：<span color='#484848'>"
+msgstr "<span color='#484848'>原始主机：</span>"
 
 #: ../src/vmm-migrate.glade.h:7
 msgid "Mbps"
