--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,16 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.8.6 (Jan 14, 2011)
+----------------------------
+- SPICE support (requires spice-gtk) (Marc-André Lureau)
+- Option to configure CPU model
+- Option to configure CPU topology
+- Save and migration cancellation (Wen Congyang)
+- Save and migration progress reporting
+- Option to enable bios boot menu
+- Option to configure direct kernel/initrd boot
+
 Release 0.8.5 (August 24, 2010)
 -------------------------------
 - Improved save/restore support
