Fix "Clone" translation in as.po

--- a/po/as.po
+++ b/po/as.po
@@ -4150,7 +4150,7 @@ msgstr "সংস্থাপনৰ উৎস:"
 
 #: ../src/vmm-details.glade.h:120
 msgid "_Clone"
-msgstr "ক্লোন করুন...(_C)করুন...(_C)করুন...(_C)কৰক...(_C)"
+msgstr "কৃত্তক কৰক... (_C)"
 
 #: ../src/vmm-details.glade.h:121
 msgid "_Console"
